Disabled legacy external runfiles.

--- a/.bazelrc
+++ b/.bazelrc
@@ -45,6 +45,9 @@ test:ciremotebuild --remote_timeout=3600
 # https://github.com/bazelbuild/bazel/issues/8195
 build --incompatible_disallow_empty_glob=true
 
+# https://github.com/bazelbuild/bazel/issues/12821
+build --nolegacy_external_runfiles
+
 ###############################################################################
 ## User flags
 ###############################################################################
